# on-chain-identity-gateway

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package-lock.json  package.json
.github/workflows/: ethereum-smart-contract.yml  solana-rust.yml  solana-ts.yml
.github_tmp/workflows/: ethereum-ts.yml
ethereum/: README.md
ethereum/gatekeeper-cli/: README.md  package.json
ethereum/gateway-eth-ts/: README.md  package.json
ethereum/gateway-eth-ts/docs/: index.html
ethereum/gateway-eth-ts/examples/: subscription.js
ethereum/smart-contract/: .npmignore  .solcover.js  README.md  hardhat-tasks.config.ts  hardhat.config.ts  package.json  tsconfig.json
ethereum/smart-contract/.openzeppelin/: avalanche-fuji.json  avalanche.json  bsc-testnet.json  bsc.json  celo-alfajores.json  celo.json  optimism.json  unknown-100.json  unknown-1001.json  unknown-11155420.json  unknown-195.json  unknown-196.json  unknown-23295.json  unknown-80002.json  unknown-8453.json  unknown-84532.json
ethereum/smart-contract/config/: deterministic-deployment.ts  networks.ts  tasks.ts
ethereum/smart-contract/deploy/: base-gatekeeper-network.ts  charge-handler.ts  flags-storage.ts  forwarder.ts  gateway-token-v0.ts  gateway-token.ts  set-flags-storage-to-proxy.ts  test-erc20.ts  (+3 more)
solana/: Cargo.toml
solana/anchor/: Cargo.toml  README.md
solana/anchor/src/: lib.rs
solana/gatekeeper-cli/: README.md  package.json
solana/gatekeeper-lib/: README.md  eslint.config.mjs  package.json
solana/gateway-ts/: eslint.config.mjs  package.json  tsconfig.build.json
solana/program/: Cargo.toml
(+362 files in other folders)
